# natricine

./: .gitignore  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  macros.py
docs/api/: cqrs.md  pubsub.md  router.md
docs/backends/: aws.md  index.md  memory.md  redis.md  sql.md
docs/concepts/: cqrs.md  messages.md  middleware.md  pubsub.md  router.md
docs/examples/: chat.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/observability/: index.md  otel.md
examples/chat/: LICENSE  README.md  app.py  handlers.py  models.py  pyproject.toml  store.py
examples/chat/src/chat_example/: __init__.py  app.py  dependencies.py  handlers.py  store.py
src/natricine/: __init__.py
