[project]
name = "natricine"
version = "0.1.0"
description = "Event-driven architecture toolkit for Python"
requires-python = ">=3.11"
dependencies = ["natricine-pubsub", "natricine-router", "natricine-cqrs"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
natricine-pubsub = { workspace = true }
natricine-router = { workspace = true }
natricine-cqrs = { workspace = true }
natricine-redisstream = { workspace = true }
natricine-conformance = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.8",
    "pydantic>=2.0",
    "ty>=0.0.1a6",
    # Backend implementations for testing
    "natricine-redisstream",
    "natricine-conformance",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "PLC0415", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["natricine"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
