[project]
name = "natricine-chat-example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "natricine-cqrs[pydantic]",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[tool.uv.sources]
natricine-cqrs = { path = "../../packages/natricine-cqrs" }
natricine-router = { path = "../../packages/natricine-router" }
natricine-pubsub = { path = "../../packages/natricine-pubsub" }
